tests/ui/fail/derive_from.rs
use nnn::nnn;

#[nnn(derive(From))]
struct FromFloat(f64);

fn main() {}
